--- a/lox.html
+++ b/lox.html
@@ -7,9 +7,66 @@
     <title>Document</title>
 </head>
 <body>
-    heelooo
-    <p>lolol</p>
-    <p>i love python</p>
+     <p> heelooo </p>
+     <a href="#unique"> click to see links</a>
+
+        i love <span> hello </span> python</p>
     <hr>
+    <p>
+        x<sub>1</sub> and y<sub>1</sub>
+       <p></p> H<sup>2</sup>O
+       <p>
+        Перші зафіксовані спроби створення статті в українській Вікіпедії датують 26 січня 2004[2]. 
+        Перша стаття — «Атом», створена 30 січня 2004 року користувачем 61.125.212.32 (пізніше зареєстрований як Yuri koval) з міста Фудзі, 
+        що у Японії. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos corporis delectus illo magnam pariatur laborum rem beatae soluta voluptatem 
+        architecto similique blanditiis totam, quae aliquid voluptas vitae, 
+        necessitatibus nostrum expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, 
+        aliquam distinctio ullam quos dignissimos sit explicabo ipsum soluta officiis, deleniti tempora delectus illo doloribus! Eos reiciendis corrupti quae atque
+        sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis perspiciatis, rem exercitationem soluta dolores, natus praesentium ab, incidunt vel omnis 
+        earum doloremque cupiditate modi laudantium eius dolor ipsa voluptatibus Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea expedita quae quia, quis 
+        necessitatibus ex totam. Tempora dolorum amet sapiente, itaque magnam quod id asperiores et aut assumenda accusantium ea. Lorem ipsum dolor sit amet, consectetur
+         adipisicing elit. Quis explicabo ad veritatis eligendi minima temporibus sit nisi aspernatur cumque? Cum mollitia quis ratione, nostrum obcaecati veritatis quos
+          nisi quibusdam modi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae amet, consequatur modi voluptatem dolorum alias dolorem. Facilis voluptatibus, 
+          repellat accusamus aspernatur provident vero, voluptates minima magnam, error necessitatibus unde tempore! Перші зафіксовані спроби створення статті в українській Вікіпедії датують 26 січня 2004[2]. 
+          Перша стаття — «Атом», створена 30 січня 2004 року користувачем 61.125.212.32 (пізніше зареєстрований як Yuri koval) з міста Фудзі, 
+          що у Японії. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos corporis delectus illo magnam pariatur laborum rem beatae soluta voluptatem 
+          architecto similique blanditiis totam, quae aliquid voluptas vitae, 
+          necessitatibus nostrum expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, 
+          aliquam distinctio ullam quos dignissimos sit <a href="02.html" target="_blank">explicabo ipsum</a> soluta officiis, deleniti tempora delectus illo doloribus! Eos reiciendis corrupti quae atque
+          sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis perspiciatis, rem exercitationem soluta dolores, natus praesentium ab, incidunt vel omnis 
+          earum doloremque cupiditate modi laudantium eius dolor ipsa voluptatibus Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea expedita quae quia, quis 
+          necessitatibus ex totam. Tempora dolorum amet sapiente, itaque magnam quod id asperiores et aut assumenda accusantium ea. Lorem ipsum dolor sit amet, consectetur
+           adipisicing elit. Quis explicabo ad veritatis eligendi minima temporibus sit nisi aspernatur cumque? Cum mollitia quis ratione, nostrum obcaecati veritatis quos
+            nisi quibusdam modi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae amet, consequatur modi voluptatem dolorum alias dolorem. Facilis voluptatibus, 
+            repellat accusamus aspernatur provident vero, voluptates minima magnam, error necessitatibus unde tempore! <br>
+            <img width="300" height="150" src="img/anime.jpg" alt="anime"> <br>
+            Перші зафіксовані спроби створення статті в українській Вікіпедії датують 26 січня 2004[2]. 
+            Перша стаття — «Атом», створена 30 січня 2004 року користувачем 61.125.212.32 (пізніше зареєстрований як Yuri koval) з міста Фудзі, 
+            що у Японії. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos corporis delectus illo magnam pariatur laborum rem beatae soluta voluptatem 
+            architecto similique blanditiis totam, quae aliquid voluptas vitae, 
+            necessitatibus nostrum expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, 
+            aliquam distinctio ullam quos dignissimos sit explicabo ipsum soluta officiis, deleniti tempora delectus illo doloribus! Eos reiciendis corrupti quae atque
+            sed?Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis perspiciatis, rem exercitationem soluta dolores, natus praesentium ab, incidunt vel omnis 
+            earum doloremque cupiditate modi laudantium eius dolor ipsa voluptatibus Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea expedita quae quia, quis 
+            necessitatibus ex totam. Tempora dolorum amet sapiente, itaque magnam quod id asperiores et aut assumenda accusantium ea. Lorem ipsum dolor sit amet, consectetur
+             adipisicing elit. Quis explicabo ad veritatis eligendi minima temporibus sit nisi aspernatur cumque? Cum mollitia quis ratione, nostrum obcaecati veritatis quos
+              nisi quibusdam modi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae amet, consequatur modi voluptatem dolorum alias dolorem. Facilis voluptatibus, 
+              repellat accusamus aspernatur provident vero, voluptates minima magnam, error necessitatibus unde tempore!
+        </p>
+    </p>
+    <pre> 
+        <em> hohol </em>
+        helo              pop     
+        music                                lol
+    </pre>
+    <p id="unique">
+    <a href="https://uk.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D1%81%D1%8C%D0%BA%D0%B0_%D0%92%D1%96%D0%BA%D1%96%D0%BF%D0%B5%D0%B4%D1%96%D1%8F" target="_bla
+    "> wikipedia </a> <br>
+    <a href="mailto:sofi20061311@gmail.com">email me</a> <br>
+    <a href="tel:+380685421510"> call me </a> <br>
+    <a href="https://t.me/+Dz9Otmiw6TtiNjQy"> join us </a> <br>
+    <a href="https://www.youtube.com/watch?v=NCDDuNH0ohU"> watch us </a>
+    </p>
+    <img width="150" height="150" src="img/anime.jpg" alt="anime">
 </body>
 </html>
