--- a/lectures/03/style-page.html
+++ b/lectures/03/style-page.html
@@ -5,9 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <style>
+        h2{
+            color: darkgreen;
+        }
+    </style>
+    <link rel="stylesheet" href="style/01.css">
 </head>
 <body>
+    <h1 style="color: blueviolet;">
+        aligator
+    </h1>
+    <h2>
+        krokodil
+    </h2>
+    <h3>
+        makaka
+    </h3>
+    <h4>loloo</h4>
+    <span>turtle</span>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+    ratione sed? Lorem ipsum dolor sit amet consectetur
+     adipisicing elit. <span> bibizyana </span> Expedita aut rerum non? Eum corporis 
+     labore a officia commodi, nesciunt veniam sed odit assumenda 
+     blanditiis <strong> bibi strong</strong> cum et debitis eligendi
+      delectus fuga.</p>
+      <p id="lox">
+        Lorem ipsum dolor, sit amet <span>hohol</span> consectetur 
+        adipisicing elit. Voluptatum vitae error mollitia culpa aut
+         cupiditate voluptate ducimus molestiae provident, fuga animi
+          maxime esse sint nostrum, enim laboriosam ratione ut blanditiis. Lorem
+           ipsum dolor sit amet consectetur, <span id="ine"> zlata </span> adipisicing elit. Perspiciatis sint
+            nesciunt rerum sed tempore praesentium consequatur modi consectetur
+             eligendi molestiae quidem excepturi hic dolores, beatae eius minus
+              repellendus voluptatum commodi.
+      </p> 
+      <p id="one"> Glory to <span id="uk">Ukraine</span> </p> 
     
+      <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+      </ul>
+      <br>
+      <div class="parent">
+        <p>1</p>
+        <p>2</p>
+        <p>3</p>
+      </div>
 </body>
 </html>
