--- a/lectures/04/one.html
+++ b/lectures/04/one.html
@@ -36,9 +36,11 @@
             </form>
         </div>
     </section>
-    <section>
-        <div class="text-content">
-
+    <section class="link-block">
+        <div class="text-content center">
+            <a href="#">tw</a>
+            <a href="#">fc</a>
+            <a href="#">em</a>
         </div>
     </section>
 </body>
